--- a/css/style.css
+++ b/css/style.css
@@ -93,10 +93,12 @@ footer ul li a:hover {
     display: flex;
     width: auto;
     height: 100%;
-
+    transition: transform 0.5s ease-in-out;
 }
 
 .carousel-slide {
+    flex: 0 0 100%;
+    height: 100%;
     position: relative;
     width: 33.33%;
     height: 100%;
@@ -294,8 +296,6 @@ footer ul li a:hover {
     padding: 10px 20px;
     background-color: #ffffff;
     border: #A65E4E 3px solid;
-    cursor: pointer;
-    transition: transform 0.3s ease;
 }
 
 .product-card:hover {
@@ -314,6 +314,7 @@ footer ul li a:hover {
     font-size: 18px;
     font-weight: 400;
     margin: 15px 0;
+    right: 90px;
 }
 
 .product-card_rating {
@@ -326,7 +327,7 @@ footer ul li a:hover {
 }
 
 .product-card p:last-child {
-    font-weight: 600;
-    font-size: 18px;
-    color: #401713;
+    position: relative;
+    right: 90px;
+    bottom: 80px;
 }
