--- a/css/style.css
+++ b/css/style.css
@@ -275,64 +275,66 @@ footer ul li a:hover {
 /*Featured Products styles*/
 
 .featured-products {
-    padding: 50px;
+    padding: 20px;
 }
 
 .product-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(500px, 3fr));
-    gap: 50px;
-    margin: 50px;
-    padding: 40px;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: 2rem;
+    margin: 2rem auto;
+    max-width: 1200px;
+    padding: 0 1rem;
 }
 
 .product-card {
-    width: 420px;
-    height: 525px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
-    text-align: center;
-    padding: 35px 35px 81px;
+    text-decoration: none;
     background-color: #ffffff;
     border: #A65E4E 3px solid;
+    overflow: hidden;
+    width: 100%;
+    max-width: 320px;
+    transition: transform 0.3s ease, box-shadow 0.1s ease;
+    
 }
 
 .product-card:hover {
-    transform: translateY(-1px);
+    transform: translateY(-5px);
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
 }
 
 .product-card img {
     width: 100%;
-    height: 352px;
+    height: 250px;
     object-fit: cover;
-    margin-bottom: 15px;
+    padding: 32px
 }
 
 .product-card h3 {
     font-family: 'Inter', sans-serif;
-    font-size: 18px;
+    font-size: 1rem;
     font-weight: 400;
     text-transform: uppercase;
-    position: relative;
-    right: 107px;
-    bottom: 21px;
+    margin: 0.8rem 0 0.4rem;
+    text-align: left;
 }
 
 .product-card_rating {
-    position: relative;
-    left: 183px;
-    bottom: 70px;
-    font-size: 14px;
+    font-size: 0.9rem;
     color: #0C0C20;
-    margin: 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
 }
 
-.product-card p:last-child {
-    position: relative;
-    right: 178px;
-    bottom: 80px;
+.product-card_price {
+    font-size: 1rem;
+    color: #0C0C20;
+    margin-bottom: 0.4rem;
 }
 
 /* Loading styles */
