--- a/css/style.css
+++ b/css/style.css
@@ -280,8 +280,9 @@ footer ul li a:hover {
 
 .product-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
+    justify-content: center;
     margin: 2rem auto;
     max-width: 1200px;
     padding: 0 1rem;
@@ -298,7 +299,7 @@ footer ul li a:hover {
     width: 100%;
     max-width: 320px;
     transition: transform 0.3s ease, box-shadow 0.1s ease;
-    
+    padding-bottom: 1rem;
 }
 
 .product-card:hover {
@@ -307,10 +308,17 @@ footer ul li a:hover {
 }
 
 .product-card img {
-    width: 100%;
-    height: 250px;
+    width: calc(100% - 20px);
+    height: 240px;
     object-fit: cover;
-    padding: 32px
+    background-color: #fff;
+    display: block;
+    margin: 10px auto 0;
+    box-sizing: border-box;
+}
+
+.product-header {
+    display: flex;
 }
 
 .product-card h3 {
@@ -318,7 +326,7 @@ footer ul li a:hover {
     font-size: 1rem;
     font-weight: 400;
     text-transform: uppercase;
-    margin: 0.8rem 0 0.4rem;
+    margin: 0.8rem 2.5rem 0.4rem;
     text-align: left;
 }
 
@@ -363,4 +371,13 @@ footer ul li a:hover {
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+
+
+/* Responsive styles */
+@media (max-width: 768px) {
+  .product-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
