--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,7 @@ footer ul li a:hover {
 
 .product-card img {
     width: calc(100% - 20px);
-    height: 240px;
+    height: 352px;
     object-fit: cover;
     background-color: #fff;
     display: block;
@@ -319,6 +319,9 @@ footer ul li a:hover {
 
 .product-header {
     display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    
 }
 
 .product-card h3 {
@@ -326,23 +329,20 @@ footer ul li a:hover {
     font-size: 1rem;
     font-weight: 400;
     text-transform: uppercase;
-    margin: 0.8rem 2.5rem 0.4rem;
-    text-align: left;
 }
 
 .product-card_rating {
-    font-size: 0.9rem;
-    color: #0C0C20;
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 4px;
+    font-size: 0.9rem;
+    color: #0C0C20;
+    gap: 0.3rem;
 }
 
 .product-card_price {
     font-size: 1rem;
     color: #0C0C20;
-    margin-bottom: 0.4rem;
+    margin-bottom: 2rem;
 }
 
 /* Loading styles */
