--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,35 @@ footer ul li a:hover {
     100% { transform: rotate(360deg); }
 }
 
+/*Product Page styles*/
 
+.product-info__header {
+    display: flex;
+    gap: 20px;
+}
+
+.share-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+    color: #401713;
+}
+
+.product-details {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    padding-top: 151px;
+}
+
+.customer-reviews {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 30rem;
+    margin-bottom: 427px;
+}
 
 /* Responsive styles */
 @media (max-width: 768px) {
