Styled log in page and creating a login.css file

--- a/css/style.css
+++ b/css/style.css
@@ -385,3 +385,19 @@ footer ul li a:hover {
     padding: 20px;
   }
 }
+
+@media (max-width: 500px) {
+  .login-container {
+    margin: 60px auto;
+    padding: 20px;
+  }
+
+  .login-form-group label {
+    margin-left: 10%;
+  }
+
+  .login-form-group input,
+  .login-btn {
+    width: 85%;
+  }
+}
