--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,13 @@ h1 {
     text-align: center;
 }   
 
+p {
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    line-height: 1.6;
+    color: #0C0C20;
+}
+
 /* Header styles */
 
 header {
@@ -48,6 +55,37 @@ nav ul li a {
     display: flex;
     gap: 41px;
     margin-right: 81px;    
+}
+
+.cta {
+  display: inline-block;
+  background-color: #F2E0D0;
+  font-size: 20px;
+  text-align: center;
+  color: #401713;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: normal;
+  white-space: nowrap;
+  border: 2px solid #401713;
+  border-radius: 8px;
+  padding: 1em 2rem;
+  max-height: 75px;
+  width: 100%;
+  max-width: 300px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-sizing: border-box;
+}
+
+.cta:hover {
+  background-color: #401713;
+  color: #BFA095;
+}
+
+.cta:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
 }
 
 /* Footer styles */
@@ -375,6 +413,10 @@ footer ul li a:hover {
 
 /* Responsive styles */
 @media (max-width: 768px) {
+    .cta {
+        font-size: 16px;
+    }
+
   .product-grid {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -383,6 +425,11 @@ footer ul li a:hover {
     flex-direction: column;
     align-items: center;
     padding: 20px;
+  }
+
+  .cart-summary {
+    align-items: center;
+    padding-right: 0;
   }
 }
 
