--- a/css/cart.css
+++ b/css/cart.css
@@ -18,6 +18,7 @@
   align-items: center;
   gap: 20px;
   padding: 20px 0;
+  font-size: 24px;
   font-weight: 700;
   text-transform: uppercase;
   padding-bottom: 10px;
