--- a/css/success.css
+++ b/css/success.css
@@ -1,6 +1,6 @@
 .success-container {
     max-width: 980px;
-    height: 440px;
+    height: auto;
     margin: 100px auto;
     padding: 40px;
     background-color: #ffffff;
