--- a/css/media.css
+++ b/css/media.css
@@ -76,6 +76,13 @@
         grid-template-columns: repeat(2, 1fr);
     }
 
+    /*Product Page */
+      .product-details {
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
+
     /* Checkout Page */
     .checkout-page {
         grid-template-columns: 1fr;
@@ -111,13 +118,6 @@
     .carousel-content p {
         font-size: 24px;
         text-align: center;
-    }
-
-    /* Product Details Page */
-    .product-details {
-        flex-direction: column;
-        align-items: center;
-        padding: 20px;
     }
 
     /*cart page */
