--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
 /* Main body  */
 
 body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
     margin: 0;
     background-color: #F2E0D0;
     font-family: 'Inter', sans-serif;
     color: #0C0C20;
+}
+
+main {
+    flex: 1;
 }
 
 h1 {
