Renamed classes and id to customer review
Renamed classes and id to customer review section in the product page to better fetch data from api.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Main body  */
+/* Main body */
 
 body {
     min-height: 100vh;
@@ -95,9 +95,6 @@ nav ul li a {
   cursor: not-allowed;
 }
 
-/* Hamburger Menu Styles */
-
-
 /* Footer styles */
 
 footer {
@@ -136,7 +133,7 @@ footer ul li a:hover {
   background: none;
   border: none;
   cursor: pointer;
-  z-index: 999; /* so it stays above the nav */
+  z-index: 999;
 }
 
 .hamburger span {
@@ -161,7 +158,6 @@ footer ul li a:hover {
   transform: translateY(-7px) rotate(-45deg);
 }
 
-/* Mobile Menu Styles - Hidden by default on desktop */
 .mobile-menu {
   display: none;
 }
