--- a/css/product.css
+++ b/css/product.css
@@ -1,3 +1,5 @@
+@import url(variables.css);
+
 .product-details {
     display: flex;
     justify-content: center;
@@ -15,6 +17,10 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+
+.product-header h3 a{
+    text-decoration: none;
 }
 
 .add-to-cart-btn-container {
@@ -36,9 +42,12 @@
     color: #401713;
 }
 
+.customer-review-container {
+    margin-left: 15px;
+}
+
 .customer-reviews {
     display: flex;
     flex-direction: column;
-    align-items:first baseline;
     margin-bottom: 427px;
 }
