--- a/css/success.css
+++ b/css/success.css
@@ -1,9 +1,11 @@
+@import url(variables.css);
+
 .success-container {
     max-width: 980px;
     height: auto;
     margin: 100px auto;
     padding: 40px;
-    background-color: #ffffff;
+    background-color: var(--color-white);
     border: 4px solid #401713;
     border-radius: 20px;
     text-align: center;
@@ -16,9 +18,9 @@
     margin-bottom: 20px;
 }
 
-.success-container p {
-    font-size: 24px;
+.success-container h2 {
+    font-size: var(--font-size-h2);
     font-weight: 700;
-    color: #A65E4E;
+    color: var(--color-accent);
     margin-bottom: 30px;
 }
