--- a/css/product.css
+++ b/css/product.css
@@ -1,6 +1,14 @@
 @import url(variables.css);
 
-.product-details {
+.product-detail-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.product-detail-section {
     display: flex;
     justify-content: center;
     gap: 40px;
@@ -23,6 +31,12 @@
     text-decoration: none;
 }
 
+.discounted-price {
+    color: #C53122;
+    font-size: 18px;
+    font-weight: 700;
+}
+
 .add-to-cart-btn-container {
     display: flex;
     justify-content: center;
@@ -43,11 +57,36 @@
 }
 
 .customer-review-container {
-    margin-left: 15px;
-}
-
-.customer-reviews {
     display: flex;
     flex-direction: column;
     margin-bottom: 427px;
+}
+
+.review-user {
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+
+.review-description {
+    margin-bottom: 15px;
+}
+
+.stars {
+  display: inline-block;
+  font-size: 28px;
+  letter-spacing: 2px;
+  position: relative;
+  color: rgba(191, 160, 149, 0.8); 
+}
+
+.stars::before {
+  content: "★★★★★";
+  letter-spacing: 2px;
+  background: linear-gradient(
+    to right,
+    #5E3A33 calc(var(--rating-percent, 0%) - 1px),
+    rgba(191, 160, 149, 0.8) calc(var(--rating-percent, 0%))
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
