--- a/css/checkout.css
+++ b/css/checkout.css
@@ -81,7 +81,20 @@ input:focus {
     border-color: #401713;
 }
 
-input:invalid:user-invalid {
+.error-message {
+    color: #C53122;
+    font-size: 14px;
+    margin-top: 5px;
+    font-weight: 500;
+}
+
+.shipping-form-group input.error,
+.payment-form-group input.error {
+    border-color: #C53122;
+}
+
+.shipping-form-group input.error:focus,
+.payment-form-group input.error:focus {
     border-color: #C53122;
 }
 
