--- a/css/media.css
+++ b/css/media.css
@@ -212,7 +212,7 @@
         grid-template-columns: 1fr;
     }
 
-    .cart-items {
+    .checkout-cart-item {
         grid-template-columns: 60px 1fr;
     }
 
