Styling on product page
Noticed a few styling issues. Now it's responsive and class names are fixed.

--- a/css/media.css
+++ b/css/media.css
@@ -129,6 +129,10 @@
         margin-left: 10px;
     }
 
+    .share-btn p {
+        display: none;
+    }
+
     /*cart page */
     .quantity-input {
         width: 12px;
