--- a/css/product.css
+++ b/css/product.css
@@ -15,7 +15,7 @@
     padding-top: 151px;
 }
 
-.product-details img {
+.product-detail-section img {
     max-width: 100%;
     object-fit: cover;
 }
@@ -49,6 +49,9 @@
 }
 
 .share-btn {
+    display: flex;
+    align-items: center;
+    gap: 8px;
     background: none;
     border: none;
     cursor: pointer;
