--- a/css/variables.css
+++ b/css/variables.css
@@ -16,6 +16,7 @@
 --color-accent: #A65E4E;
 --color-border: #401713;
 --color-white: #FFFFFF;
+--color-error: #C53122;
 
 /*Borders*/
 --border-radius-small: 8px;
