--- a/css/account.css
+++ b/css/account.css
@@ -1,4 +1,4 @@
-@import url(../variables.css);
+@import url(../css/variables.css);
 
 /* Login Page & Register Page Styles */
 
@@ -57,7 +57,39 @@ input:focus {
 }
 
 input:invalid:user-invalid {
-    border-color: #C53122;
+    border-color: var(--color-error);
+}
+
+/* Error message styles */
+.error-message {
+    color: var(--color-error);
+    font-size: 14px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    text-align: left;
+    width: 70%;
+    display: none;
+    font-weight: 500;
+}
+
+.login-form-group input.error,
+.register-form-group input.error {
+    border-color: var(--color-error);
+}
+
+.login-form-group input.error:focus,
+.register-form-group input.error:focus {
+    border-color: var(--color-error);
+    box-shadow: 0 0 0 2px rgba(197, 49, 34, 0.2);
+}
+
+/* Success message */
+.success-message {
+    color: var(--color-secondary);
+    font-size: 16px;
+    margin: 15px 0;
+    text-align: center;
+    font-weight: 600;
 }
 
 /* Remember Me Checkbox */
@@ -93,7 +125,7 @@ input:invalid:user-invalid {
     margin-top: 10px;
 }
 
-/* Links */
+/* Link */
 .forgot-password-link {
     display: block;
     width: 73%;
