Updated authentication for login and registration
Re did authentication to support mock users and storing new users in localStorage. Improved validations.

--- a/css/product.css
+++ b/css/product.css
@@ -91,5 +91,6 @@
     rgba(191, 160, 149, 0.8) calc(var(--rating-percent, 0%))
   );
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
