Moved carousel function to carousel.js
Moved all of the carousel function into it's on file and refactored the product-page.js  & api.js. Adjusted styling in carousel to fit the picture and follow the figma design

--- a/css/media.css
+++ b/css/media.css
@@ -119,10 +119,16 @@
     }
 
     /* Carousel */
-    .carousel-content p {
+    .carousel-slide p {
         font-size: 24px;
         text-align: center;
     }
+
+    .carousel-content-slide-2  {
+        display: flex;
+        justify-content: center;
+    }
+  
 
     /* Product Page */
     .customer-review-container {
