--- a/css/product.css
+++ b/css/product.css
@@ -63,6 +63,8 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 427px;
+    padding-left: 25%;
+
 }
 
 .review-user {
@@ -91,5 +93,6 @@
     rgba(191, 160, 149, 0.8) calc(var(--rating-percent, 0%))
   );
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
