--- a/css/style.css
+++ b/css/style.css
@@ -162,28 +162,24 @@ footer ul li a:hover {
 /* Carousel styles */
 .carousel {
     position: relative;
-    width: 100%;
+    width: 80%;
+    max-width: 1200px;
     height: 500px;
+    margin: 0 auto;
     overflow: hidden;
-    margin-bottom: 50px;
 }
 
 .carousel-container {
     display: flex;
-    width: auto;
     height: 100%;
     transition: transform 0.5s ease-in-out;
+    width: 300%; 
 }
 
 .carousel-slide {
-    flex: 0 0 100%;
+    flex: 0 0 33.333%; 
     height: 100%;
     position: relative;
-    width: 33.33%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .carousel-slide img {
@@ -194,21 +190,84 @@ footer ul li a:hover {
     border-radius: 15px;
 }
 
+/* General carousel content styles */
 .carousel-content {
     position: absolute;
-    bottom: 50px;
-    left: 50px;
-    color: var(--color-background);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
     z-index: 2;
 }
 
-.carousel-content p {
+/*Carousel Content 1 styles*/
+.carousel-content-slide-1,
+.carousel-content-slide-3 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
+    z-index: 2;
+}
+
+.carousel-image-1{
+    opacity: 0.9;
+}
+
+.carousel-image_text-1 {
     font-family: var(--font-heading);
+    color: var(--color-accent);
     font-size: 72px;
     font-weight: 700;
     margin: 0 0 20px 0;
-    text-shadow: 2px 2px 4px var(--color-text);
+
 }
+
+/*Carousel Content 2 styles*/
+.carousel-image_text-2 {
+    position: absolute;
+    left: 5rem;
+    bottom: 1rem;
+    color: var(--color-primary);
+    font-size: 72px;
+    font-weight: 700;
+    line-height: 1;
+    z-index: 3;
+}
+
+.carousel-content-slide-2-button {
+    position: absolute;
+    right: 3rem;
+    bottom: 5rem;
+    z-index: 3;
+}
+
+/*Carousel Content 3 styles*/
+.carousel-image_text-3 {
+    font-family: var(--font-heading);
+    color: var(--color-text);
+    font-size: 72px;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 0 0 20px 0;
+    text-shadow: 
+        0 0 3px rgba(242, 224, 208, 0.8),
+        0 0 3px rgba(242, 224, 208, 0.8),
+        0 0 3px rgba(242, 224, 208, 0.8),
+        0 0 3px rgba(242, 224, 208, 0.8);
+}
+
 
 .shop-now {
     background-color: var(--color-background);
@@ -219,7 +278,7 @@ footer ul li a:hover {
     width: 207px;
     height: 49px;
     font-family: var(--font-heading);
-    font-size: 18px;
+    font-size: var(--font-size-body);
     font-weight: 600;
     text-transform: uppercase;
     cursor: pointer;
