--- a/css/variables.css
+++ b/css/variables.css
@@ -3,6 +3,7 @@
 --font-heading: 'Figtree', sans-serif;
 --font-body: 'Inter', sans-serif;
 
+--font-size-display: 72px;
 --font-size-h1: 56px;
 --font-size-h2: 24px;
 --font-size-body: 18px;
